--- a/assets/css/components/tag.css
+++ b/assets/css/components/tag.css
@@ -4,6 +4,7 @@
 	border-radius: var(--border-radius-sm);
 	font-size: var(--text-sm);
 	text-decoration: none;
+	white-space: nowrap;
 
 	&:hover {
 		background: var(--primary-200);
